writ-compiler/tests/snapshots/lowering_tests__compound_sub_assign.snap
---
source: writ-compiler/tests/lowering_tests.rs
expression: ast
---
Ast {
    items: [
        Fn(
            AstFnDecl {
                attrs: [],
                vis: None,
                name: "f",
                name_span: 3..4,
                generics: [],
                params: [],
                return_type: None,
                body: [
                    Let {
                        mutable: true,
                        name: "x",
                        name_span: 17..18,
                        ty: Some(
                            Named {
                                name: "int",
                                span: 20..23,
                            },
                        ),
                        value: IntLit {
                            value: 0,
                            span: 26..27,
                        },
                        span: 9..28,
                    },
                    Expr {
                        expr: Assign {
                            target: Ident {
                                name: "x",
                                span: 29..30,
                            },
                            value: Binary {
                                left: Ident {
                                    name: "x",
                                    span: 29..30,
                                },
                                op: Sub,
                                right: IntLit {
                                    value: 2,
                                    span: 34..35,
                                },
                                span: 29..35,
                            },
                            span: 29..35,
                        },
                        span: 29..36,
                    },
                ],
                span: 0..38,
            },
        ),
    ],
}
