writ-compiler/tests/snapshots/lowering_tests__concurrency_defer_passthrough.snap
---
source: writ-compiler/tests/lowering_tests.rs
expression: ast
---
Ast {
    items: [
        Fn(
            AstFnDecl {
                attrs: [],
                vis: None,
                name: "f",
                name_span: 3..4,
                generics: [],
                params: [],
                return_type: None,
                body: [
                    Expr {
                        expr: Defer {
                            expr: Block {
                                stmts: [
                                    Expr {
                                        expr: Call {
                                            callee: Ident {
                                                name: "cleanup",
                                                span: 17..24,
                                            },
                                            args: [],
                                            span: 17..26,
                                        },
                                        span: 17..27,
                                    },
                                ],
                                span: 15..29,
                            },
                            span: 9..29,
                        },
                        span: 9..29,
                    },
                ],
                span: 0..31,
            },
        ),
    ],
}
