writ-compiler/tests/snapshots/lowering_tests__concurrency_detached_spawn_passthrough.snap
---
source: writ-compiler/tests/lowering_tests.rs
expression: ast
---
Ast {
    items: [
        Fn(
            AstFnDecl {
                attrs: [],
                vis: None,
                name: "f",
                name_span: 3..4,
                generics: [],
                params: [],
                return_type: None,
                body: [
                    Expr {
                        expr: SpawnDetached {
                            expr: Call {
                                callee: Ident {
                                    name: "doWork",
                                    span: 24..30,
                                },
                                args: [],
                                span: 24..32,
                            },
                            span: 9..32,
                        },
                        span: 9..33,
                    },
                ],
                span: 0..35,
            },
        ),
    ],
}
