writ-compiler/tests/snapshots/lowering_tests__dlg_choice_basic.snap
---
source: writ-compiler/tests/lowering_tests.rs
expression: ast
---
Ast {
    items: [
        Fn(
            AstFnDecl {
                attrs: [],
                vis: None,
                name: "ask",
                name_span: 4..7,
                generics: [],
                params: [],
                return_type: None,
                body: [
                    Let {
                        mutable: false,
                        name: "_narrator",
                        name_span: 13..21,
                        ty: None,
                        value: GenericCall {
                            callee: MemberAccess {
                                object: Ident {
                                    name: "Entity",
                                    span: 13..21,
                                },
                                field: "getOrCreate",
                                field_span: 13..21,
                                span: 13..21,
                            },
                            type_args: [
                                Named {
                                    name: "Narrator",
                                    span: 13..21,
                                },
                            ],
                            args: [],
                            span: 13..21,
                        },
                        span: 13..21,
                    },
                    Expr {
                        expr: Call {
                            callee: Ident {
                                name: "say",
                                span: 12..40,
                            },
                            args: [
                                AstArg {
                                    name: None,
                                    value: Ident {
                                        name: "_narrator",
                                        span: 13..21,
                                    },
                                    span: 12..40,
                                },
                                AstArg {
                                    name: None,
                                    value: StringLit {
                                        value: "What do you think?",
                                        span: 22..40,
                                    },
                                    span: 12..40,
                                },
                            ],
                            span: 12..40,
                        },
                        span: 12..40,
                    },
                    Expr {
                        expr: Call {
                            callee: Ident {
                                name: "choice",
                                span: 50..108,
                            },
                            args: [
                                AstArg {
                                    name: None,
                                    value: ArrayLit {
                                        elements: [
                                            Call {
                                                callee: Ident {
                                                    name: "ChoiceOption",
                                                    span: 52..79,
                                                },
                                                args: [
                                                    AstArg {
                                                        name: None,
                                                        value: StringLit {
                                                            value: "\"Good\"",
                                                            span: 52..58,
                                                        },
                                                        span: 52..79,
                                                    },
                                                    AstArg {
                                                        name: None,
                                                        value: StringLit {
                                                            value: "219273af",
                                                            span: 52..79,
                                                        },
                                                        span: 52..79,
                                                    },
                                                    AstArg {
                                                        name: None,
                                                        value: Lambda {
                                                            params: [],
                                                            return_type: None,
                                                            body: [
                                                                Expr {
                                                                    expr: Call {
                                                                        callee: Ident {
                                                                            name: "say",
                                                                            span: 61..77,
                                                                        },
                                                                        args: [
                                                                            AstArg {
                                                                                name: None,
                                                                                value: Ident {
                                                                                    name: "_narrator",
                                                                                    span: 62..70,
                                                                                },
                                                                                span: 61..77,
                                                                            },
                                                                            AstArg {
                                                                                name: None,
                                                                                value: StringLit {
                                                                                    value: "Great!",
                                                                                    span: 71..77,
                                                                                },
                                                                                span: 61..77,
                                                                            },
                                                                        ],
                                                                        span: 61..77,
                                                                    },
                                                                    span: 61..77,
                                                                },
                                                            ],
                                                            span: 52..79,
                                                        },
                                                        span: 52..79,
                                                    },
                                                ],
                                                span: 52..79,
                                            },
                                            Call {
                                                callee: Ident {
                                                    name: "ChoiceOption",
                                                    span: 80..106,
                                                },
                                                args: [
                                                    AstArg {
                                                        name: None,
                                                        value: StringLit {
                                                            value: "\"Bad\"",
                                                            span: 80..85,
                                                        },
                                                        span: 80..106,
                                                    },
                                                    AstArg {
                                                        name: None,
                                                        value: StringLit {
                                                            value: "dacd3489",
                                                            span: 80..106,
                                                        },
                                                        span: 80..106,
                                                    },
                                                    AstArg {
                                                        name: None,
                                                        value: Lambda {
                                                            params: [],
                                                            return_type: None,
                                                            body: [
                                                                Expr {
                                                                    expr: Call {
                                                                        callee: Ident {
                                                                            name: "say",
                                                                            span: 88..104,
                                                                        },
                                                                        args: [
                                                                            AstArg {
                                                                                name: None,
                                                                                value: Ident {
                                                                                    name: "_narrator",
                                                                                    span: 89..97,
                                                                                },
                                                                                span: 88..104,
                                                                            },
                                                                            AstArg {
                                                                                name: None,
                                                                                value: StringLit {
                                                                                    value: "Sorry.",
                                                                                    span: 98..104,
                                                                                },
                                                                                span: 88..104,
                                                                            },
                                                                        ],
                                                                        span: 88..104,
                                                                    },
                                                                    span: 88..104,
                                                                },
                                                            ],
                                                            span: 80..106,
                                                        },
                                                        span: 80..106,
                                                    },
                                                ],
                                                span: 80..106,
                                            },
                                        ],
                                        span: 50..108,
                                    },
                                    span: 50..108,
                                },
                            ],
                            span: 50..108,
                        },
                        span: 50..108,
                    },
                ],
                span: 0..110,
            },
        ),
    ],
}
